retrieveUnpackaged/objects/Mer__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_RollUp__c</fullName>
        <label>Test RollUp</label>
        <summarizedField>Lineitems__c.Amoun_to_pay__c</summarizedField>
        <summaryForeignKey>Lineitems__c.mearcahndize__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inventory__c</fullName>
        <label>inventory</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <summarizedField>Lineitems__c.Amoun_to_pay__c</summarizedField>
        <summaryForeignKey>Lineitems__c.mearcahndize__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Merchandize</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>